fix: Login form on 404 page is too dark & not editable fixes #859

--- a/github-dark.css
+++ b/github-dark.css
@@ -2425,10 +2425,12 @@
     fill: #fc3 !important;
   }
   .progress-bar.anim-grow-x, .dev-hero, .header-search-key-slash,
-  input[src$="with-facebook.png"], #parallax_field,
-  #parallax_illustration *:not(#parallax_error_text),
+  input[src$="with-facebook.png"], #parallax_field, #parallax_illustration,
   figure .callout-permalink-big-image, figure .callout-permalink-stacked-image {
     filter: brightness(75%) !important;
+  }
+  img#parallax_error_text {
+    filter: invert(100%) hue-rotate(180deg) brightness(120%) !important;
   }
   .header-search-key-slash {
     filter: grayscale(100%) contrast(1.5) !important;
